Bug 387494 - wrong PPD file or missing translation for printer
Summary: wrong PPD file or missing translation for printer
Status: RESOLVED FIXED
Alias: None
Product: print-manager
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Daniel Nicoletti
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-12-01 13:38 UTC by Alain Roger
Modified: 2018-01-21 21:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Partial translation of printer settings dialog box (66.71 KB, text/plain)
2017-12-01 13:38 UTC, Alain Roger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alain Roger 2017-12-01 13:38:16 UTC
Created attachment 109150 [details]
Partial translation of printer settings dialog box

My mom uses french localization of Ubuntu 17.10 with KDE.
In the printer dialog box, part of text is in english and other part in french.

i discovered that issue comes from PPD file that is not adequate regarding to localization (French) and only english version is used as you can see on:

[img]http://i66.tinypic.com/2m67o1u.jpg[/img]

you have attached the original file which is located in: /etc/cups/ppd, in my mom's case it's called : EPSON_XP-332_335_Series.ppd (i attached it as original)

now i can modify it and change few strings into french localization and here is the result:
[IMG]http://i68.tinypic.com/20rpjs.jpg[/IMG]

Nobody should modify manualy this file in order to have it localized. Something is wrong as i install french driver from EPSON directly on my mom's laptop.

Several other people told me that they have the same issue with Spanish or other localization.
Comment 1 Luigi Toscano 2018-01-21 21:35:11 UTC
Git commit 893222767251a4b22953afe6f845f03d421d4fa9 by Luigi Toscano.
Committed on 21/01/2018 at 21:34.
Pushed by ltoscano into branch 'Applications/17.12'.

Initialize the translations of the ppd

Summary:
The to ppdLocalize() make sure that the translated strings in the PPD for
the current language are returned instead of the untranslated string.

Unfortunately not all translations are returned, for example section
titles are not translated (the translations are defined a bit differently
in the PPD file and I didn't fine an easy way in the API to extract them).

Test Plan:
(Most) translations are now available for the printer reported in the bug,
and at least another printer.

Reviewers: dantti, aacid

Reviewed By: aacid

Subscribers: ngraham, kde-utils-devel, #localization

Differential Revision: https://phabricator.kde.org/D9996

M  +1    -0    configure-printer/PrinterOptions.cpp

https://commits.kde.org/print-manager/893222767251a4b22953afe6f845f03d421d4fa9